--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
-    "express-validator": "^7.1.0"
+    "express-validator": "^7.1.0",
+    "method-override": "^3.0.0"
   },
   "type": "module"
 }
