--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "type": "module"
 }
